# osqp-mpc

./: CMakeLists.txt  LICENSE  README.md
examples/: benchmarking.cpp  inverted_pendulum.cpp
include/: osqp_mpc.hpp
